<resources>
    <string name="app_name">Medication Alarm App</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="stop_alarm">STOP ALARM</string>
    <string name="medication_alarm_app">Medication Alarm App</string>
    <string name="login">Login</string>
    <string name="new_user_create_account_here">New User? Create Account Here</string>
    <string name="input_a_password">Input a password</string>
    <string name="input_your_name">Input your name</string>
    <string name="login_into_your_account">Login into your Account</string>
    <string name="input_your_email" />
</resources>