<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/medication_alarm_app"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="225dp"
        android:layout_height="41dp"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/login_into_your_account"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="361dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#7A4E4E4E"
        android:ems="10"
        android:fontFamily="@font/advent_pro_medium"
        android:hint="input your email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <EditText
        android:id="@+id/password"
        android:layout_width="362dp"
        android:layout_height="50dp"
        android:background="#7A4E4E4E"
        android:ems="10"
        android:fontFamily="@font/advent_pro_medium"
        android:hint="@string/input_a_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <TextView
        android:id="@+id/RegisterLink"
        android:layout_width="256dp"
        android:layout_height="31dp"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/new_user_create_account_here"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

</androidx.constraintlayout.widget.ConstraintLayout>